--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,8 @@ dependencies = [
     "uvicorn (>=0.35.0,<0.36.0)",
     "python-gitlab (>=6.3.0,<7.0.0)",
     "psycopg2-binary (>=2.9.10,<3.0.0)",
-    "kafka-python (>=2.2.15,<3.0.0)"
+    "kafka-python (>=2.2.15,<3.0.0)",
+    "clickhouse-sqlalchemy (>=0.3.2,<0.4.0)"
 ]
 
 
